# homelab

./: .dockerignore  .firebaserc  .gitignore  .mcp.json  ARCHITECT.md  BUILDER.md  CLAUDE.md  ELECTRIC-SQL-MIGRATION.md  LICENSE  MONEY_IMPROVEMENTS.md  NAVIGATION_AUDIT.md  PERF_BACKLOG.md  README.md  REVIEWER.md  SCHEMA.md  SUPABASE-MIGRATION.md  SYNC-ENGINE-DESIGN.md  TASK-MODEL-DESIGN.md  TODO.md  docker-compose.test.yml  firebase.json  firestore.rules  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json  turbo.json
.claude/: settings.json
.claude/agents/: desktop-expert.md  home-shell-expert.md  infra-k3s-expert.md  ingest-money-expert.md  life-upkeep-expert.md  mcp-expert.md  mobile-web-expert.md  money-expert.md  pocketbase-expert.md  recipes-expert.md  security-expert.md  shopping-expert.md  supabase-expert.md  sync-engine-expert.md  travel-expert.md
.firebase/: hosting.YXBwL2Rpc3Q.cache
.github/workflows/: test.yml
_firebase/: firebase.json  firestore.indexes.json  package-lock.json  package.json
_firebase/docs/: feature-specs.md
_firebase/scripts/: migrate-grocery-history.ts  migrate-grocery-items.ts
_firebase/tests/: join-flow.test.ts  package-lock.json  package.json  (+1 more)
_money/: CLAUDE.md
app/: package-lock.json  package.json  playwright.config.ts
core/: cli.ts  package-lock.json
critic/: __init__.py  aggregator.py  analyzer.py  cache.py  chunker.py  cli.py  critic.py  discovery.py  extractor.py  inspect.py  parser.py  retry.py  schema.py  summarizer.py  timeline.py  types.py  wiki_generator.py
docs/: auth-policy.md  scraping-playbook.md
extension/: background.js  manifest.json  popup.html  popup.js
extension-recipes/: README.md  extract.js  manifest.json  options.html  options.js  popup.html  popup.js
frontend/: package-lock.json  package.json  vite.config.ts
functions/: package-lock.json  package.json
infra/: build-extension.sh  build.sh  cloud-init.yaml  deploy.sh  setup-k3s.sh  test-env.sh
scripts/: ally_api_discovery.py  analyze_betterment_graphql.py  analyze_network_logs.py  backfill_ally_from_txns.py  backfill_history.py  backfill_performance.py  check_ally_history.py  check_ally_transactions.py  check_perf_spikes.py  check_spikes.py  extract_betterment_ops.py  inspect_wf_perf.py  test_betterment_perf.py  test_betterment_sync.py  test_sync_all.py
services/ingest/: MIGRATION.md  README.md  cli.py  debug_cookies.py  mcp_server.py  pyproject.toml  recurring.py  schema.sql  storage.py  suggest.py
services/ingest/ingest/: capital_one.py
services/ingest/ingest/scrapers/: ally.py  betterment.py
services/ingest/scripts/: scrub_fixture.py
services/ingest/src/money/: calendar.py  categorize.py  cli.py  config.py  config_io.py  db.py  mcp_server.py  schema.sql  server.py  suggest.py
services/ingest/src/money/ingest/: ally_api.py  betterment.py  capital_one.py  chase.py  fidelity.py  morgan_stanley.py  registry.py  schemas.py  wealthfront.py
services/ingest/tests/: test_capture.py  test_cli_capture.py  test_cli_config.py  test_cli_parse_test.py  test_cli_registry.py  test_db.py  test_identity.py  test_models.py  test_parsers.py  test_server.py
services/ingest/tests/fixtures/: ally_network_log.json  capital_one_cookies.json  wealthfront_network_log.json
test-manuscripts/: README.md
tests/: firestore-broken.rules  test_ally_parser.py  test_models.py  test_parsers.py  test_server.py
tools/: admin  admin.ts
(+1243 files in other folders)
