[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critic"
version = "0.1.0"
description = "Literary critic agent for manuscript analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "python-docx>=1.1.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
critic = "critic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["critic"]
